# kaleido-cli

./: .gitignore  LICENSE  Makefile  README.md  install.py  install.sh  pyproject.toml
.github/workflows/: ci.yml
kaleido_cli/: __init__.py  __main__.py  app.py  config.py  context.py  docker_manager.py  onboarding.py  output.py
kaleido_cli/commands/: __init__.py  asset.py  channel.py  config_cmd.py  lsp.py  maker.py  market.py  node.py  node_swap.py  payment.py  peer.py  swap.py  taker.py  wallet.py
kaleido_cli/utils/: __init__.py  assets.py  channel_orders.py  errors.py  pairs.py  prompts.py  quotes.py  swaps.py
tests/: conftest.py  test_cmd_config.py  test_cmd_market.py  test_cmd_node.py  test_cmd_swap.py  test_cmd_wallet.py  test_config.py  test_docker_manager.py  test_output.py  test_utils_assets.py  test_utils_errors.py  test_utils_prompts.py  test_utils_swaps.py
