[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaleido-cli"
version = "0.1.0"
description = "CLI for managing RGB Lightning Nodes and interacting with Kaleidoswap"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Kaleidoswap", email = "dev@kaleidoswap.com" }
]
keywords = ["bitcoin", "lightning", "rgb", "kaleidoswap", "cli"]
dependencies = [
    "typer>=0.12.0",
    "shellingham>=1.5",
    "rich>=13.0.0",
    "pyyaml>=6.0.0",
    "kaleido-sdk==0.1.2",
]

[project.scripts]
kaleido = "kaleido_cli.app:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://kaleidoswap.com"
Repository = "https://github.com/kaleidoswap/kaleido-cli"

[tool.hatch.build.targets.wheel]
packages = ["kaleido_cli"]

[tool.pyright]
pythonVersion = "3.10"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["install.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]
